# RenderEngine

./: CMakeLists.txt  imgui.ini
Demo/: CMakeLists.txt
Demo/openWindow/: main.cpp
GEngine/: CMakeLists.txt  engine_predeclared.h
GEngine/Dependencies/glm/: glm_dummy
GEngine/FunctionAPI/: CMakeLists.txt
GEngine/FunctionAPI/Algorithms/: algo_predeclared.h
GEngine/FunctionAPI/Algorithms/MeshProcessor/: mesh_from_texture.cpp  mesh_from_texture.h  normal_generator.cpp  normal_generator.h
GEngine/FunctionAPI/Algorithms/Primitives/: base_obj.cpp  base_obj.h  cube_obj.cpp  cube_obj.h  height_map_obj.cpp  height_map_obj.h  plane_obj.cpp  plane_obj.h  primitives_include.h  primitives_predeclared.h  sphere_obj.cpp  sphere_obj.h
GEngine/FunctionAPI/AttributeSystem/: attribute_base.cpp  attribute_base.h  attribute_predeclared.h  object_attribute.cpp  object_attribute.h
GEngine/FunctionAPI/AttributeSystem/AppearanceAttribute/: texture_base.cpp  texture_base.h
GEngine/FunctionAPI/AttributeSystem/CameraAttribute/: camera_base.cpp  camera_base.h
GEngine/FunctionAPI/AttributeSystem/DynamicsAttribute/: transformer_base.cpp  transformer_base.h
GEngine/FunctionAPI/AttributeSystem/GeometryAttribute/: geometry_base.cpp  geometry_base.h
GEngine/FunctionAPI/AttributeSystem/IlluminousAttribute/: base_lighting.cpp  base_lighting.h  directional_lighting.cpp  directional_lighting.h  lighting_include.h  point_light.cpp  point_light.h
GEngine/FunctionAPI/Resources/: resource_manager.cpp  resource_manager.h  resource_predeclare.h
GEngine/FunctionAPI/Resources/Attribute/: attribute_manager.cpp  attribute_manager.h
GEngine/FunctionAPI/Resources/Mesh/: instance_mesh.cpp  instance_mesh.h  mesh_manager.cpp  mesh_manager.h
GEngine/FunctionAPI/Resources/Model/: model_manager.cpp  model_manager.h
GEngine/FunctionAPI/Resources/Shaders/: shader_loader.cpp  shader_loader.h  shader_manager.cpp  shader_manager.h
GEngine/FunctionAPI/Resources/Texture/: texture_loader.cpp  texture_loader.h  texture_manager.cpp  texture_manager.h
GEngine/GraphicsAPI/: CMakeLists.txt  basic_include.h
GEngine/GraphicsAPI/opengl/: compile_predeclared.cpp  complie_predeclared.h  data_buffer.cpp  data_buffer.h  draw_call.cpp  draw_call.h  frame_buffer.cpp  frame_buffer.h  graphic_predeclared.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  status_call.cpp  status_call.h  texture_2d.cpp  texture_2d.h  texture_cube.cpp  texture_cube.h
GEngine/RenderAPI/: CMakeLists.txt  engine_math.cpp  engine_math.h  general_include.h
GEngine/RenderAPI/RenderBuffer/: buffer_predeclared.h  data_pool.cpp  data_pool.h  fbo_pool.cpp  fbo_pool.h  shader_pool.cpp  shader_pool.h  texture_pool.cpp  texture_pool.h
GEngine/RenderAPI/RenderData/: data_predeclared.h  render_integrator.cpp  render_integrator.h  render_mesh.cpp  render_mesh.h  render_node.cpp  render_node.h  render_parameter.cpp  render_parameter.h  render_system.cpp  render_system.h
GEngine/RenderAPI/RenderFactory/: render_factory.cpp  render_factory.h
GEngine/RenderAPI/RenderLog/: render_log.cpp  render_log.h
GEngine/RenderAPI/RenderModules/: data_mod.cpp  data_mod.h  draw_mod.cpp  draw_mod.h  fbo_mod.cpp  fbo_mod.h  initialization_mod.cpp  initialization_mod.h  shader_mod.cpp  shader_mod.h  status_mod.cpp  status_mod.h  texture_mod.cpp  texture_mod.h
GEngine/RenderAPI/RenderQueue/: render_data.cpp  render_data.h  render_predeclared.h  render_queue.cpp  render_queue.h  render_queue_group.cpp  render_queue_group.h  render_queue_priority_group.cpp  render_queue_priority_group.h
GEngine/RenderAPI/RenderService/: render_pipeline.cpp  render_pipeline.h  render_server.cpp  render_server.h
GEngine/RenderAPI/RenderThread/: engine_thread_pool.cpp  engine_thread_pool.h  thread_predeclared.h
GEngine/ResourceFile/ShaderFile/BlinnPhong/: blinn_phong_frag.glsl  blinn_phong_vert.glsl
GEngine/ResourceFile/ShaderFile/CubeMapping/: cube_mapping_frag.glsl  cube_mapping_vert.glsl
GEngine/ResourceFile/ShaderFile/DisplacementMap/: displacement_mapping_frag.glsl  displacement_mapping_vert.glsl
GEngine/ResourceFile/ShaderFile/EnvironmentMapping/: environment_mapping_frag.glsl  environment_mapping_vert.glsl
GEngine/UserAPI/: CMakeLists.txt
GEngine/UserAPI/FileSystem/: file_handler.cpp  file_handler.h  file_handler_predeclared.h  ply_reader.cpp  ply_reader.h
GEngine/UserAPI/Scene/: scene_manager.cpp  scene_manager.h  scene_predeclared.h
Interactive/: CMakeLists.txt  file_selection_win.cpp  file_selection_win.h  info_win.cpp  info_win.h  log_win.cpp  log_win.h  menu_win.cpp  menu_win.h  resource_win.cpp  resource_win.h  scene_tree_win.cpp  scene_tree_win.h  window_base.cpp  window_base.h  window_predeclared.h  winidow_ops.cpp  winidow_ops.h
Interactive/plugins/: plugin_base.cpp  plugin_base.h  selected_combo_plugin.cpp  selected_combo_plugin.h
(+24 files in other folders)
